feat: add generate openapi cmd